# cmake_learn

cmake_git/: 阅读说明
cmake_git/example_test1/: CMakeLists.txt
cmake_git/example_test1/src/: CMakeLists.txt  main.cpp
cmake_git/example_test1/src/evolution/: CMakeLists.txt
cmake_git/example_test1/src/initial/: CMakeLists.txt
cmake_git/example_test1/src/io/: CMakeLists.txt
cmake_git/example_test1/src/parser/: CMakeLists.txt
cmake_git/t1/src/: CMakeLists.txt  config.h.in  main.cpp
cmake_git/t1/src/calc/: CMakeLists.txt
cmake_git/test01/: CMakeLists.txt  hello_world.cpp
